--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "entities": "^3.0.1",
     "express": "^4.17.3",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sanitize-html": "^2.7.0",
+    "socket.io": "^4.4.1"
   },
   "type": "module"
 }
